@@ -9,7 +9,7 @@ AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
 AC_FUNC_CHECK(utimes,AC_DEFINE(HAS_UTIMES))
 AC_FUNC_CHECK(getutent,AC_DEFINE(HAVE_GETUTENT))
-AC_HAVE_HEADERS(sys/filio.h unistd.h sys/label.h)
+AC_HAVE_HEADERS(sys/filio.h unistd.h sys/label.h ttyent.h)
 CHECK_DIRENT
 CHECK_FCNTL
 AC_COMPILE_CHECK([F_SETOWN],
